--- a/NGS/HW2.ipynb
+++ b/NGS/HW2.ipynb
@@ -27,6 +27,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ДЗ 2. Панков Викентий"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Часть 1.\n",
     "## 1. Покрытие генома"
    ]
   },
@@ -34,6 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Выравнивание и расчёт статистики покрытия генома (samtools): \n",
+    "\n",
     "bwa index MG1655-K12.first10K.fasta\n",
     "\n",
     "bwa mem MG1655-K12.first10K.fasta test_1.fastq > test_1.sam\n",
@@ -48,6 +58,13 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### График и статистика покрытия генома"
    ]
   },
   {
@@ -223,6 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Часть 2.\n",
     "## 2.1. Статистика ридов IonTorrent\n"
    ]
   },
@@ -276,6 +294,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Статистика длин инделов"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -311,6 +336,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Матрица замен, длина инделов в зависимости от длины гомополимерного участка и статистика ошибочных вставок/замен"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
@@ -324,31 +356,27 @@
     "    pattern = re.compile(nucl + \"{10,}\")\n",
     "    for record in SeqIO.parse(\"data/HW2/test/ion_reference.fasta\", \"fasta\"):\n",
     "        for match in pattern.finditer(str(record.seq).upper()):\n",
-    "            homopolymers.append((match.start(), match.end()))\n",
-    "\n",
-    "\n"
+    "            homopolymers.append((match.start(), match.end()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "T+2AA 1\nT\nA+3AAG 2\nA\nC+2AA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nC+2AA 1\nC\nC+3AAA 1\nC\nG+2AA 1\nG\nC+9AAAAAAAAA 1\nC\nG+7AAAAAAA 1\nG\nG+2AA 1\nG\nC+2AA 1\nC\nT+10AAAAAAAAAA 1\nT\nT+2AA 1\nT\nC+4AAAA 1\nC\nA+3AAT 1\nA\nC+4AAAA 1\nC\nG+2AA 1\nG\nT+2AA 1\nT\nT+3TAA 1\nT\nT+4AAAA 1\nT\nT+2AA 1\nT\nA+4AAAC 1\nA\nT+2AA 2\nT\nC+2AA 1\nC\nG+4GAAA 1\nG\nC+2AA 1\nC\nC+9AAAAAAAAA 1\nC\nT+7AAAAAAA 1\nT\nC+2AA 1\nC\nT+11AAAAAAAAAAA 1\nT\nC+2AA 1\nC\nT+6AAAAAA 1\nT\nT+3TAA 1\nT\nT+2AA 2\nT\nG+2AA 2\nG\nG+3GAA 1\nG\nT+2AA 1\nT\nA+3AAG 1\nA\nC+2AA 1\nC\nG+2AA 1\nG\nC+2AA 1\nC\nG+4GGAA 1\nG\nA+3AAT 1\nA\nA+6AGAATT 1\nA\nG+2AA 1\nG\nG+2AA 1\nG\nG+9AAAAAAAAA 1\nG\nT+2AA 6\nT\nC+3AAA 1\nC\nG+2AA 1\nG\nT+3AAA 2\nT\nG+2AA 1\nG\nT+3AAA 1\nT\nC+3CAA 1\nC\nC+7AAAAAAA 1\nC\nT+3TAA 1\nT\nT+2AA 1\nT\nT+3TAA 1\nT\nG+3AAA 1\nG\nC+16AAAAAAAAAAAAAAAA 1\nC\nG+2AA 1\nG\nG+5AATTC 1\nG\nT+2AA 1\nT\nG+3AAA 1\nG\nC+2AA 1\nC\nC+4AAAA 1\nC\nC+2AA 2\nC\nC+2AA 1\nC\nA+3AAC 1\nA\nA+5AAGGG 1\nA\nG+5GAAAA 1\nG\nC+3AAA 1\nC\nC+5AAAAA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nG+3AAA 1\nG\nT+2AA 2\nT\nT+2AA 1\nT\nG+4AAAA 1\nG\nG+2AA 1\nG\nG+7AAAAAAA 1\nG\nT+3AAA 1\nT\nT+3AAA 1\nT\nT+5AAAAA 1\nT\nG+3AAA 2\nG\nA+3AAT 1\nA\nA+3AAT 1\nA\nG+2AA 1\nG\nT+2AA 1\nT\nA+5AAACG 1\nA\nG+2AA 1\nG\nT+2AA 1\nT\nC+2AA 1\nC\nG+3AAA 1\nG\nC+2AA 2\nC\nT+4AAAA 1\nT\nG+2AA 1\nG\nT+2AA 1\nT\nA+3AAG 1\nA\nT+19AAAAAAAAAAAAAAAAAAA 1\nT\nC+2AA 1\nC\nC+2AA 1\nC\nT+7AAAAAAA 1\nT\nC+2AA 1\nC\nT+2AA 1\nT\nC+2AA 1\nC\nT+3AAA 1\nT\nC+4AAAA 1\nC\nG+2AA 1\nG\nT+2AA 1\nT\nC+2AA 1\nC\nG+2AA 1\nG\nG+2AA 1\nG\nT+2AA 1\nT\nC+5AAAAA 1\nC\nG+9AAAAAAAAA 1\nG\nC+4AAAA 1\nC\nG+2AA 2\nG\nC+2AA 1\nC\nT+2AA 1\nT\nC+10AAAAAAAAAA 1\nC\nT+3AAA 1\nT\nT+10AAAAAAAAAA 1\nT\nG+2AA 1\nG\nC+5AAAAA 1\nC\nG+3AAA 1\nG\nA+5AACCC 1\nA\nA+4AAAG 1\nA\nG+4AATC 1\nG\nC+2AA 1\nC\nT+2AA 1\nT\nC+3TAA 1\nC\nT+2AA 1\nT\nG+3GAA 1\nG\nC+2AA 1\nC\nC+2AA 1\nC\nG+4AAAA 1\nG\nC+3AAA 1\nC\nG+18AAAAAAAAAAAAAAAAAA 1\nG\nA+5AAAAG 1\nA\nG+2AA 1\nG\nA+3AAC 1\nA\nT+2AA 1\nT\nT+8AAAAAAAA 1\nT\nT+2AA 1\nT\nT+2AA 1\nT\nC+3AAA 1\nC\nT+2AA 1\nT\nC+3AAA 1\nC\nC+2AA 1\nC\nT+5AAAAA 1\nT\nA+5AAAAT 1\nA\nG+2AA 3\nG\nT+2AA 1\nT\nG+2AA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nA+3AAT 1\nA\nT+2AA 1\nT\nC+3AAA 1\nC\nC+2AA 1\nC\nA+3AAT 1\nA\nT+2AA 1\nT\nT+2AA 1\nT\nT+2AA 1\nT\nC+3AAA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nC+2AA 1\nC\nT+2AA 5\nT\nG+2AA 1\nG\nT+2AA 1\nT\nG+2AA 1\nG\nT+2AA 1\nT\nT+2AA 1\nT\nC+2AA 1\nC\nC+2AA 1\nC\nC+4AAAA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nG+2AA 2\nG\nT+2AA 1\nT\nA+4AAAG 1\nA\nC+3AAA 1\nC\nG+2AA 1\nG\nC+2AA 1\nC\nT+2AA 1\nT\nC+2AA 1\nC\nG+7AAAAATA 1\nG\nC+4AAAA 1\nC\nT+6AAAAAA 1\nT\nC+18AAAAAAAAAAAAAAAAAA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nG+2AA 1\nG\nT+2AA 1\nT\nC+4AAAA 1\nC\nG+2AA 1\nG\nA+3AAC 1\nA\nT+2AA 1\nT\nC+2AA 2\nC\nT+3TAA 1\nT\nC+2AA 1\nC\nG+3GAA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nA+4GAAT 1\nA\nG+2AA 1\nG\nG+2AA 2\nG\nG+2AA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nA+3AAG 1\nA\nC+7AAAAAAA 1\nC\nG+5AAAAA 1\nG\nC+3CAA 1\nC\nG+2AA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nG+4AAAA 1\nG\nC+3CAA 1\nC\nG+3GAA 1\nG\nT+2AA 1\nT\nT+11AAAAAAAAAAA 1\nT\nT+18AAAAAAAAAAAAAAAAAA 1\nT\nT+2AA 1\nT\nC+3AAA 1\nC\nC+2AA 1\nC\nG+2AA 1\nG\nT+3TAA 1\nT\nC+2AA 2\nC\nG+2AA 1\nG\nC+2AA 1\nC\nT+2AA 1\nT\nC+2AA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nC+2AA 1\nC\nG+2AA 1\nG\nC+2AA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nC+3AAA 1\nC\nG+2AA 1\nG\nT+3TAA 1\nT\nG+2AA 1\nG\nC+2AA 1\nC\nC+2AA 3\nC\nC+2AA 2\nC\nT+3AAA 1\nT\nC+3CAA 1\nC\nC+4AAAA 1\nC\nG+3AAA 1\nG\nC+5AAAAA 1\nC\nA+3AAC 1\nA\nG+2AA 1\nG\nG+4AAAA 1\nG\nT+3AAA 1\nT\nA+3AAG 1\nA\nG+13TAAAAAAAAAAAA 1\nG\nT+7AAAAAAA 1\nT\nG+8AGAAAAAA 1\nG\nC+2AA 1\nC\nG+2AA 1\nG\nA+3AAG 1\nA\nT+3TAA 1\nT\nT+4AAAA 1\nT\nT+3AAA 1\nT\nC+2AA 2\nC\nT+3AAA 1\nT\nG+14AAAAAAAAAAAAAA 1\nG\nC+2AA 1\nC\nA+3AAT 1\nA\nC+3AAA 1\nC\nT+2AA 1\nT\nC+2AA 1\nC\nC+2AA 1\nC\nA+4AAAT 1\nA\nG+2AA 1\nG\nA+3AAT 1\nA\nG+2AA 1\nG\nC+2AA 1\nC\nG+2AA 1\nG\nC+2AA 3\nC\nC+2AA 1\nC\nG+2AA 1\nG\nG+7AAAAAAA 1\nG\nG+2AA 1\nG\nG+2AA 1\nG\nT+2AA 1\nT\nT+4AAAA 1\nT\nT+2AA 1\nT\nT+2AA 1\nT\nC+2AA 1\nC\nG+8AAAAAAAA 1\nG\nG+3GAA 2\nG\nG+2AA 1\nG\nG+2AA 1\nG\nC+2AA 1\nC\nA+3AAC 1\nA\nT+3AAA 1\nT\nT+3AAA 1\nT\nG+4GGAA 1\nG\nA+3AAT 1\nA\nC+2AA 1\nC\nT+2AA 1\nT\nC+13ACAAAAAAAAAAA 1\nC\nC+3CAA 1\nC\nG+2AA 2\nG\nT+2AA 1\nT\nA+3AAT 1\nA\nG+2AA 1\nG\nC+2AA 3\nC\nT+2AA 1\nT\nA+4AAAG 1\nA\nT+2AA 1\nT\nT+3AAA 1\nT\nC+9AAAAAAAAA 1\nC\nC+2AA 1\nC\nT+7AAAAAAA 1\nT\nG+2AA 1\nG\nA+3AAT 1\nA\nC+2AA 2\nC\nC+2AA 1\nC\nC+2AA 1\nC\nG+2AA 3\nG\nT+3AAA 1\nT\nC+5AAAAA 1\nC\nG+7AAAAAAA 1\nG\nC+3CAA 1\nC\nA+3AAT 1\nA\nG+2AA 1\nG\nG+2AA 1\nG\nG+6AAAAAA 1\nG\nC+3AAA 1\nC\nC+2AA 1\nC\nA+3AAC 1\nA\nT+3TAA 1\nT\nG+3AAA 1\nG\nG+2AA 1\nG\nC+2AA 1\nC\nG+2AA 1\nG\nT+3AAA 1\nT\nT+8AAAAAAAA 1\nT\nC+4AAAA 1\nC\nT+6AAAAAA 1\nT\nC+3AAA 1\nC\nG+2AA 1\nG\nG+3AAA 1\nG\nG+2AA 1\nG\nC+2AA 1\nC\nT+5AAAAA 1\nT\nT+8AAAAAAAA 1\nT\nC+3AAA 1\nC\nA+3AAT 1\nA\nT+2AA 1\nT\nT+7AAAAAAA 1\nT\nC+12AAAAAAAAAAAA 1\nC\nT+2AA 2\nT\nG+2AA 1\nG\nT+3GAA 1\nT\nC+2AA 2\nC\nT+2AA 1\nT\nG+3GAA 1\nG\nT+2AA 1\nT\nC+2AA 1\nC\nT+2AA 1\nT\nC+10AAAAAAAAAA 1\nC\nG+2AA 1\nG\nT+2AA 1\nT\nT+2AA 1\nT\nG+2AA 1\nG\nT+7AAAATAA 1\nT\nA+4AAAT 1\nA\nT+2AA 1\nT\nT+3TAA 1\nT\nT+3AAA 1\nT\nG+2AA 1\nG\nT+3AAA 1\nT\nT+2AA 1\nT\nC+2AA 3\nC\nA+3AAT 1\nA\nT+2AA 3\nT\nC+2AA 1\nC\nG+2AA 1\nG\nT+2AA 1\nT\nT+2AA 1\nT\nG+3AAA 1\nG\nG+2AA 2\nG\nG+8AAAAAAAA 1\nG\nG+2AA 1\nG\nC+3AAA 1\nC\nT+2AA 1\nT\nG+2AA 1\nG\nT+4CAAA 1\nT\nC+2AA 1\nC\nA+21TTTCGGAATTGCTTCCAGGAC 1\nA\nG+2AA 1\nG\nT+3AAA 1\nT\nT+3AAA 1\nT\nC+2AA 1\nC\nG+2AA 1\nG\nC+4AAAA 1\nC\nG+2AA 1\nG\nA+3AAT 1\nA\nA+7AACATTG 1\nA\nC+2AA 1\nC\nG+2AA 1\nG\nT+3AAA 1\nT\nG+2AA 1\nG\nC+2AA 1\nC\nT+2AA 1\nT\nT+2AA 1\nT\nC+2AA 3\nC\nT+2AA 1\nT\nG+2AA 1\nG\nG+3AAA 1\nG\nA+3AAG 1\nA\nC+2AA 1\nC\nT+3AAA 1\nT\nA+3AAC 1\nA\nT+2AA 1\nT\nG+2AA 1\nG\nG+2AA 1\nG\nA+4AAAC 1\nA\nC+2AA 1\nC\nT+2AA 3\nT\nT+2AA 1\nT\nC+2AA 1\nC\nT+2AA 1\nT\nG+14AAAAAAAAAAAAAA 1\nG\nG+2AA 1\nG\nT+5TATAA 1\nT\nC+3CAA 1\nC\nT+2AA 1\nT\nG+9AAAAAAAAA 1\nG\nG+3AAA 1\nG\nC+2AA 1\nC\nC+3AAA 1\nC\nC+2AA 1\nC\nT+2AA 2\nT\nG+2AA 1\nG\nG+2AA 1\nG\nT+2AA 1\nT\nC+8AAAAAAAA 1\nC\nA+6AAAAAT 1\nA\nG+6AAAAAA 1\nG\nT+2AA 1\nT\nG+2AA 1\nG\nT+5TAAAA 1\nT\nA+3AAT 1\nA\nT+4TAAA 1\nT\nG+2AA 1\nG\nT+2AA 1\nT\nT+2AA 3\nT\nA+3AAG 1\nA\nC+2AA 1\nC\nA+3AAT 1\nA\nG+2AA 1\nG\nG+2AA 1\nG\nG+3GAA 1\nG\nT+2AA 1\nT\nG+6TAAGTA 1\nG\nT+2AA 2\nT\nG+2AA 1\nG\nC+3AAA 1\nC\nC+3AAT 1\nC\nT+2AA 1\nT\nT+2AA 1\nT\nG+2AA 1\nG\nC+2AA 1\nC\nG+2AA 1\nG\nT+2AA 1\nT\nT+3AAA 1\nT\nC+6AAAAAA 1\nC\nG+3GAA 1\nG\nT+5AAAAA 1\nT\nA+3AAG 1\nA\nG+2AA 1\nG\nC+2AA 1\nC\nT+2AA 1\nT\nT+2AA 1\nT\nA+6GTTAAC 1\nA\n"
+     "text": "Качество нуклеотидов при ошибочных вставках: mean: 20.04586108650676, std: 5.599432252267291\nКачество нуклеотидов при ошибочных заменах: mean: 25.92765312744701, std: 6.830821413153504\nМатрица замен:\n"
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-5aa6a078db0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mref_base\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseqIo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpileupcolumn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreference_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mref_pos\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpileupcolumn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_query_sequences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd_indels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcounts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;31m#if(key!=ref_base and str.upper(key)!=ref_base):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>C</th>\n      <th>G</th>\n      <th>T</th>\n      <th>_</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>39004120</td>\n      <td>6798</td>\n      <td>13630</td>\n      <td>7566</td>\n      <td>142490</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>6206</td>\n      <td>38685257</td>\n      <td>4715</td>\n      <td>20799</td>\n      <td>59629</td>\n    </tr>\n    <tr>\n      <th>G</th>\n      <td>20235</td>\n      <td>5290</td>\n      <td>38532132</td>\n      <td>6149</td>\n      <td>60663</td>\n    </tr>\n    <tr>\n      <th>T</th>\n      <td>7446</td>\n      <td>13109</td>\n      <td>6992</td>\n      <td>38989619</td>\n      <td>145526</td>\n    </tr>\n    <tr>\n      <th>_</th>\n      <td>68257</td>\n      <td>76266</td>\n      <td>109526</td>\n      <td>58678</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "          A         C         G         T       _\nA  39004120      6798     13630      7566  142490\nC      6206  38685257      4715     20799   59629\nG     20235      5290  38532132      6149   60663\nT      7446     13109      6992  38989619  145526\n_     68257     76266    109526     58678       0"
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -360,17 +388,27 @@
     "\n",
     "seqIo = list(SeqIO.parse(\"data/HW2/test/ion_reference.fasta\", \"fasta\"))\n",
     "\n",
+    "insertQualities = []\n",
+    "mismatchQualities = []\n",
+    "\n",
     "for pileupcolumn in samfile.pileup():\n",
+    "\n",
     "    ref_pos = pileupcolumn.reference_pos\n",
     "    ref_base = seqIo[pileupcolumn.reference_id].seq[ref_pos]\n",
-    "    pileupcolumn\n",
+    "\n",
+    "    queriesAndQualities = zip(pileupcolumn.get_query_qualities(), pileupcolumn.get_query_sequences(add_indels = True))\n",
+    "    curInsertQualities = [i for (i,j) in queriesAndQualities if \"-\" in j]\n",
+    "    if(len(curInsertQualities) > 0):\n",
+    "        insertQualities.extend(curInsertQualities)\n",
+    "\n",
+    "    queriesAndQualities = zip(pileupcolumn.get_query_qualities(), pileupcolumn.get_query_sequences(add_indels = False))\n",
+    "    curMismatchQualities = [i for (i,j) in queriesAndQualities if j!=ref_base]\n",
+    "    if(len(curMismatchQualities) > 0):\n",
+    "        mismatchQualities.extend(curMismatchQualities)\n",
+    "\n",
     "    counts = Counter(pileupcolumn.get_query_sequences(add_indels = True))\n",
     "    for key in counts.keys():\n",
-    "        #if(key!=ref_base and str.upper(key)!=ref_base):\n",
-    "        if(\"AA\" in key):\n",
-    "            print(key, counts[key])\n",
-    "            print(seqIo[pileupcolumn.reference_id].seq[ref_pos])\n",
-    "            break \n",
+    "\n",
     "        if(\"-\" in key):\n",
     "            subsMatrix[symMap[\"_\"], symMap[key[0]]] += counts[key]\n",
     "        elif(\"+\" in key):\n",
@@ -382,6 +420,10 @@
     "matrix.index = [\"A\",\"C\",\"G\",\"T\", '_']\n",
     "matrix.columns = [\"A\",\"C\",\"G\",\"T\", '_']\n",
     "\n",
+    "print(f\"Качество нуклеотидов при ошибочных вставках: mean: {np.mean(insertQualities)}, std: {np.std(insertQualities)}\" )\n",
+    "print(f\"Качество нуклеотидов при ошибочных заменах: mean: {np.mean(mismatchQualities)}, std: {np.std(mismatchQualities)}\" )\n",
+    "\n",
+    "print(\"Матрица замен:\")\n",
     "matrix"
    ]
   },
