--- a/NGS/HW6/HW6.ipynb
+++ b/NGS/HW6/HW6.ipynb
@@ -45,14 +45,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Качество сборки для PacBio x 10:\n"
+    "### Качество сборки для PacBio x 10:\n",
+    "![alt text](pacbio10.PNG \"Title\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Качество сборки для PacBio x 20:\n",
+    "![alt text](pacbio20.PNG \"Title\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](pacbio10.PNG \"Title\")\n"
+    "### Качество сборки для PacBio x 40:\n",
+    "![alt text](pacbio40.PNG \"Title\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Качество сборки для PacBio x 80:\n",
+    "![alt text](pacbio80.PNG \"Title\")\n"
    ]
   },
   {
