--- a/NGS/HW6/HW6.ipynb
+++ b/NGS/HW6/HW6.ipynb
@@ -79,6 +79,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Качество сборки - суммарно:\n",
+    "![alt text](all.PNG \"Title\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Выводы\n",
+    "\n",
+    "1. Чем больше покрытие PacBio, тем лучше по всем параметрам\n",
+    "3. При недостаточном покрытии точность PacBio очень низкая. Превзойти Illumina в точности можно только при покрытии 40-80\n",
+    "4. Нет смысла делать гибридную сборку, если у нас есть возможность получить высокое покрытие (80x) на PacBio; гибридная хуже чистой PacBio x80 по всем параметрам, хотя и сильно лучше чистой Illumina сборки\n",
+    "5. NGA50 для PacBio лучше Illumina уже при покрытии больше 10. Контигов получается намного меньше, и они, соответственно, намного длиннее. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
