--- a/HW6/hw06_task.ipynb
+++ b/HW6/hw06_task.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +162,18 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/1\n",
-      "23136/60000 [==========>...................] - ETA: 17s - loss: 0.3038 - accuracy: 0.9112"
+      "60000/60000 [==============================] - 28s 470us/step - loss: 0.2047 - accuracy: 0.9399 - val_loss: 0.0999 - val_accuracy: 0.9713\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.sequential.Sequential at 0x2068ac9f248>"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -172,9 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/1\n",
+      "60000/60000 [==============================] - 26s 439us/step - loss: 2.3082 - accuracy: 0.1045 - val_loss: 2.3075 - val_accuracy: 0.1032\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.sequential.Sequential at 0x2068e4d7648>"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "FitMnist(train_data, test_data, 'sigmoid')"
    ]
