NGS HW6 little fixes

--- a/NGS/HW6/HW6.ipynb
+++ b/NGS/HW6/HW6.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "### Качество сборки - суммарно:\n",
-    "![alt text](all.png \"Title\")\n"
+    "![alt text](all.PNG \"Title\")\n"
    ]
   },
   {
