--- a/NGS/HW4.ipynb
+++ b/NGS/HW4.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.8.1-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -32,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +40,12 @@
     "\n",
     "5. если исходная позиция была правильной, а скорректированная удалена (заменена буквой N) - это Incorrectly removed base\n",
     "\n",
-    "6. если исходная позиция была неправильной, а скорректированная удалена - это Detected and removed error\n",
-    "    \n",
-    "*** TODO: Учесть инсерции/делеции ***"
+    "6. если исходная позиция была неправильной, а скорректированная удалена - это Detected and removed error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,22 +64,23 @@
     "    correctlyUnmodified = 0\n",
     "    incorrectlyRemoved = 0\n",
     "\n",
+    "    total=0\n",
     "    for original_read, corrected_read in zip(original_align.fetch(), corrected_align.fetch()):\n",
     "        try:\n",
-    "\n",
+    "            total+=1\n",
     "            if(original_read.cigartuples is None or original_read.cigartuples is None):\n",
     "                continue\n",
-    "\n",
     "            origin_query = original_read.query_sequence\n",
     "            origin_aligns = original_read.get_aligned_pairs(matches_only = True, with_seq = True)\n",
     "            corrected_query = corrected_read.query_sequence\n",
     "            corrected_aligns = corrected_read.get_aligned_pairs(matches_only = True, with_seq = True)\n",
     "\n",
     "            for original_tuple, corrected_tuple in zip(origin_aligns, corrected_aligns):\n",
+    "                if(original_tuple[0]!=corrected_tuple[0] and original_tuple[1]!=corrected_tuple[1]):\n",
+    "                    continue\n",
+    "\n",
     "                origin_base = origin_query[original_tuple[0]] #нуклеотид в исходном риде\n",
     "                corrected_base = corrected_query[corrected_tuple[0]] #нуклеотид в скорректированном риде\n",
-    "\n",
-    "\n",
     "                if(origin_base != original_tuple[2] and corrected_base == \"N\"):\n",
     "                    detectedAndRemoved+=1\n",
     "                elif(origin_base != original_tuple[2] and corrected_base == corrected_tuple[2]): #_tuple[2] - нуклеотид в референсе\n",
@@ -117,6 +93,7 @@
     "                    falselyCorrected+=1\n",
     "                elif(origin_base == original_tuple[2] and corrected_base == corrected_tuple[2]):\n",
     "                    correctlyUnmodified+=1\n",
+    "                        \n",
     "        except ValueError:\n",
     "            mdTags+=1\n",
     "\n",
@@ -129,7 +106,6 @@
     "    df.loc[\"Correct base in raw data\", \"Error in corrected reads\"]=falselyCorrected\n",
     "    df.loc[\"Correct base in raw data\", \"Correct base in corrected reads\"]=correctlyUnmodified\n",
     "    df.loc[\"Correct base in raw data\", \"Base is absent in corrected reads\"]=incorrectlyRemoved\n",
-    "\n",
     "    return df\n"
    ]
   },
@@ -142,21 +118,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>9662</td>\n      <td>2132767</td>\n      <td>1206</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>910197</td>\n      <td>239174223</td>\n      <td>140355</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                         Error in corrected reads  \\\n-                                                   \nError in raw data                            9662   \nCorrect base in raw data                   910197   \n\n                         Correct base in corrected reads  \\\n-                                                          \nError in raw data                                2132767   \nCorrect base in raw data                       239174223   \n\n                         Base is absent in corrected reads  \n-                                                           \nError in raw data                                     1206  \nCorrect base in raw data                            140355  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>8599</td>\n      <td>1894125</td>\n      <td>1062</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>860901</td>\n      <td>227079568</td>\n      <td>133216</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Error in corrected reads  \\\n-                                                    \nError in raw data                             8599   \nCorrect base in raw data                    860901   \n\n                          Correct base in corrected reads  \\\n-                                                           \nError in raw data                                 1894125   \nCorrect base in raw data                        227079568   \n\n                          Base is absent in corrected reads  \n-                                                            \nError in raw data                                      1062  \nCorrect base in raw data                             133216  "
      },
-     "execution_count": 133,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 53
     }
    ],
    "source": [
-    "estimateErrors(\"data/HW4/original2.bam\", \"data/HW4/trim2.bam\")"
+    "estimateErrors(\"/mnt/d/NGS/data/HW4/original2.bam\", \"/mnt/d/NGS/data/HW4/trim2.bam\")"
    ]
   },
   {
@@ -175,21 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>2190</td>\n      <td>2166270</td>\n      <td>6263</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>210186</td>\n      <td>242597992</td>\n      <td>406992</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                         Error in corrected reads  \\\n-                                                   \nError in raw data                            2190   \nCorrect base in raw data                   210186   \n\n                         Correct base in corrected reads  \\\n-                                                          \nError in raw data                                2166270   \nCorrect base in raw data                       242597992   \n\n                         Base is absent in corrected reads  \n-                                                           \nError in raw data                                     6263  \nCorrect base in raw data                            406992  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>1644</td>\n      <td>1677445</td>\n      <td>6247</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>166381</td>\n      <td>198884517</td>\n      <td>394421</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Error in corrected reads  \\\n-                                                    \nError in raw data                             1644   \nCorrect base in raw data                    166381   \n\n                          Correct base in corrected reads  \\\n-                                                           \nError in raw data                                 1677445   \nCorrect base in raw data                        198884517   \n\n                          Base is absent in corrected reads  \n-                                                            \nError in raw data                                      6247  \nCorrect base in raw data                             394421  "
      },
-     "execution_count": 134,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 49
     }
    ],
    "source": [
-    "estimateErrors(\"data/HW4/original2.bam\", \"data/HW4/bayeshammer.bam\")"
+    "estimateErrors(\"/mnt/d/NGS/data/HW4/original2.bam\", \"/mnt/d/NGS/data/HW4/bayeshammer.bam\")"
    ]
   },
   {
@@ -198,6 +191,36 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.6.7-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python36764bitqiime2conda34c7ba42efd5400ab9cd042bd98524c4",
+   "display_name": "Python 3.6.7 64-bit ('qiime2': conda)"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
